feat: Enhance blog posts with updated article schema, new FAQ schema, and expanded content.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,23 +12,51 @@
     <meta name="keywords"
         content="passive income calculator, financial independence, dividend income tracker, rental income planner, FIRE calculator, financial freedom, retirement planning, investment goal tracker">
     <!-- SEO: Canonical and Robots -->
-    <link rel="canonical" href="https://your-domain.com/">
+    <link rel="canonical" href="https://butfirstfire.com/">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Passive Income Goal Tracker">
+    <meta property="og:title" content="But First Fire - FIRE Calculator & Planner">
     <meta property="og:description"
-        content="Plan and track your journey to financial independence with dividends, rentals, and more.">
+        content="Free FIRE calculator and passive income tracker. Plan your financial independence with dividend investing, rental income, and more.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-domain.com/">
-    <meta property="og:image" content="https://your-domain.com/og-image.png">
+    <meta property="og:url" content="https://butfirstfire.com/">
+    <meta property="og:image" content="https://butfirstfire.com/dashboard-screenshot.png">
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Passive Income Goal Tracker">
+    <meta name="twitter:title" content="But First Fire - FIRE Calculator & Planner">
     <meta name="twitter:description"
-        content="Plan and track your journey to financial independence with dividends, rentals, and more.">
-    <meta name="twitter:image" content="https://your-domain.com/og-image.png">
+        content="Free FIRE calculator and passive income tracker. Plan your financial independence with dividend investing, rental income, and more.">
+    <meta name="twitter:image" content="https://butfirstfire.com/dashboard-screenshot.png">
+
+    <!-- JSON-LD Organization Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "But First Fire",
+        "url": "https://butfirstfire.com",
+        "logo": "https://butfirstfire.com/favicon.png",
+        "description": "Free FIRE calculator and passive income tracker for financial independence",
+        "sameAs": []
+    }
+    </script>
+
+    <!-- JSON-LD WebSite Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "But First Fire",
+        "url": "https://butfirstfire.com",
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://butfirstfire.com/blog?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+        }
+    }
+    </script>
 
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
