--- a/frontend/about.html
+++ b/frontend/about.html
@@ -219,11 +219,6 @@
                 <h2>Our Values</h2>
                 <div class="values-grid">
                     <div class="value-card">
-                        <div class="value-icon">🔒</div>
-                        <h4>Privacy First</h4>
-                        <p>Your financial data stays on your device. No accounts required, no data sold.</p>
-                    </div>
-                    <div class="value-card">
                         <div class="value-icon">💰</div>
                         <h4>Always Free</h4>
                         <p>Core tools are free forever. Financial planning shouldn't cost a fortune.</p>
@@ -245,11 +240,10 @@
                 <!-- Author Profile Card -->
                 <div
                     style="display: flex; align-items: flex-start; gap: 1.5rem; padding: 2rem; background: linear-gradient(135deg, rgba(102, 126, 234, 0.05) 0%, rgba(118, 75, 162, 0.05) 100%); border-radius: 16px; margin: 1.5rem 0;">
-                    <div
-                        style="width: 100px; height: 100px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: white; font-weight: 700; font-size: 2.5rem; flex-shrink: 0;">
-                        N</div>
+                    <img src="/ninad-headshot.jpg" alt="Ninad"
+                        style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; flex-shrink: 0;">
                     <div>
-                        <h3 style="margin: 0 0 0.5rem; font-size: 1.5rem; color: #0f172a;">Ninad Mundalik</h3>
+                        <h3 style="margin: 0 0 0.5rem; font-size: 1.5rem; color: #0f172a;">Ninad</h3>
                         <p style="margin: 0 0 0.75rem; color: #667eea; font-weight: 500;">Founder & Early Retiree (33)
                         </p>
                         <p style="margin: 0; color: #475569; line-height: 1.7;">
