chore: Update site branding to "But First Fire", canonicalize all URLs to absolute paths, add a favicon, and update the copyright year.

--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -4,9 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - FIRE Planner | Financial Independence Insights</title>
+    <title>Blog - But First Fire | Financial Independence Insights</title>
     <meta name="description"
         content="Learn about FIRE, passive income strategies, and financial independence through our expert articles and guides.">
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://butfirstfire.com/blog">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Blog - But First Fire | Financial Independence Insights">
+    <meta property="og:description"
+        content="Learn about FIRE, passive income strategies, and financial independence through our expert articles and guides.">
+    <meta property="og:url" content="https://butfirstfire.com/blog">
+    <meta property="og:image" content="https://butfirstfire.com/dashboard-screenshot.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Blog - But First Fire | Financial Independence Insights">
+    <meta name="twitter:description"
+        content="Learn about FIRE, passive income strategies, and financial independence through our expert articles and guides.">
+    <meta name="twitter:image" content="https://butfirstfire.com/dashboard-screenshot.png">
+
+    <!-- JSON-LD -->
+    <script type="application/ld+json">
+    {"@context": "https://schema.org", "@type": "Blog", "name": "But First Fire Blog", "description": "Learn about FIRE, passive income strategies, and financial independence through our expert articles and guides.", "url": "https://butfirstfire.com/blog", "publisher": {"@type": "Organization", "name": "But First Fire", "logo": {"@type": "ImageObject", "url": "https://butfirstfire.com/favicon.png"}}}
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -18,7 +42,7 @@
     <!-- Header -->
     <header class="blog-header">
         <div class="header-container">
-            <a href="/" class="blog-logo">FIRE Planner</a>
+            <a href="/" class="blog-logo">But First Fire</a>
             <a href="/" class="nav-link">← Back to App</a>
         </div>
     </header>
@@ -51,7 +75,7 @@
     <!-- Footer -->
     <footer class="blog-footer">
         <div class="footer-container">
-            <p>&copy; 2025 But First Fire. All rights reserved.</p>
+            <p>&copy; 2026 But First Fire. All rights reserved.</p>
             <p style="margin-top: 0.5rem; font-size: 0.875rem;">Empowering your journey to financial independence</p>
             <p class="footer-links" style="margin-top: 0.75rem;">
                 <a href="/about" style="color: #94a3b8; text-decoration: none; margin: 0 0.75rem;">About</a>
