feat: introduce 404 error page and add Open Graph, Twitter, and canonical meta tags to several existing pages.

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -7,7 +7,8 @@
     <title>About Us - But First Fire | Our Mission for Financial Independence</title>
     <meta name="description"
         content="Learn about But First Fire - the free FIRE calculator and passive income tracker helping thousands plan their path to financial independence and early retirement.">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="canonical" href="https://butfirstfire.com/about">
 
     <!-- Open Graph -->
     <meta property="og:title" content="About But First Fire">
@@ -15,7 +16,14 @@
         content="Our mission to help everyone achieve financial independence through smart planning.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://butfirstfire.com/about">
+    <meta property="og:image" content="https://butfirstfire.com/dashboard-screenshot.png">
 
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About Us - But First Fire | Our Mission for Financial Independence">
+    <meta name="twitter:description" content="Learn about But First Fire - the free FIRE calculator and passive income tracker helping thousands plan their path to financial independence and early retirement.">
+    <meta name="twitter:image" content="https://butfirstfire.com/dashboard-screenshot.png">
     <!-- Fonts & Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
