--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -7,8 +7,22 @@
     <title>Contact Us - But First Fire</title>
     <meta name="description"
         content="Get in touch with the But First Fire team. We'd love to hear your questions, feedback, or suggestions about our FIRE calculator and financial planning tools.">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="canonical" href="https://butfirstfire.com/contact">
 
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Contact Us - But First Fire">
+    <meta property="og:description" content="Get in touch with the But First Fire team. We'd love to hear your questions, feedback, or suggestions about our FIRE calculator and financial planning tools.">
+    <meta property="og:url" content="https://butfirstfire.com/contact">
+    <meta property="og:image" content="https://butfirstfire.com/dashboard-screenshot.png">
+
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Contact Us - But First Fire">
+    <meta name="twitter:description" content="Get in touch with the But First Fire team. We'd love to hear your questions, feedback, or suggestions about our FIRE calculator and financial planning tools.">
+    <meta name="twitter:image" content="https://butfirstfire.com/dashboard-screenshot.png">
     <!-- Fonts & Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
