--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -7,8 +7,22 @@
     <title>Terms of Service - But First Fire</title>
     <meta name="description"
         content="Terms of Service for But First Fire. Read our terms and conditions for using our FIRE calculator and financial planning tools.">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="canonical" href="https://butfirstfire.com/terms">
 
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Terms of Service - But First Fire">
+    <meta property="og:description" content="Terms of Service for But First Fire. Read our terms and conditions for using our FIRE calculator and financial planning tools.">
+    <meta property="og:url" content="https://butfirstfire.com/terms">
+    <meta property="og:image" content="https://butfirstfire.com/dashboard-screenshot.png">
+
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Terms of Service - But First Fire">
+    <meta name="twitter:description" content="Terms of Service for But First Fire. Read our terms and conditions for using our FIRE calculator and financial planning tools.">
+    <meta name="twitter:image" content="https://butfirstfire.com/dashboard-screenshot.png">
     <!-- Fonts & Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
