--- a/frontend/about.html
+++ b/frontend/about.html
@@ -248,7 +248,7 @@
                 <!-- Author Profile Card -->
                 <div
                     style="display: flex; align-items: flex-start; gap: 1.5rem; padding: 2rem; background: linear-gradient(135deg, rgba(102, 126, 234, 0.05) 0%, rgba(118, 75, 162, 0.05) 100%); border-radius: 16px; margin: 1.5rem 0;">
-                    <img src="/ninad-headshot.jpg" alt="Ninad"
+                    <img src="/ninad-headshot.jpg" alt="Ninad — founder of But First Fire, early retiree at 33 who went from 40K debt to millionaire"
                         style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; flex-shrink: 0;">
                     <div>
                         <h3 style="margin: 0 0 0.5rem; font-size: 1.5rem; color: #0f172a;">Ninad</h3>
