--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -33,7 +33,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="blog.css">
 </head>
@@ -62,20 +63,40 @@
             <button class="search-clear" id="searchClear" style="display:none;" aria-label="Clear search">✕</button>
         </div>
 
-        <!-- Articles -->
+        <!-- Tag Filters -->
+        <div class="tag-filters" id="tagFilters">
+            <!-- Populated by JS -->
+        </div>
+
+        <!-- Hero Featured Post -->
+        <div id="heroPost">
+            <!-- Populated by JS -->
+        </div>
+
+        <!-- Articles Grid -->
         <section class="recent-section">
             <div class="articles-list" id="articlesGrid">
-                <!-- Populated from posts.json (paginated all posts) -->
+                <!-- Populated from posts.json -->
             </div>
             <div class="load-more-container">
                 <button id="loadMoreBtn" class="load-more-btn">Load More</button>
             </div>
-            <div id="noResults" style="display:none; text-align:center; padding:3rem 1rem; color:#64748b;">
+            <div id="noResults" class="no-results" style="display:none;">
                 <div style="font-size:3rem; margin-bottom:1rem;">🔍</div>
                 <p style="font-size:1.125rem; font-weight:500; color:#0f172a; margin:0 0 0.5rem;">No articles found</p>
-                <p style="margin:0;">Try a different search term or <a href="#" id="clearSearchLink"
+                <p style="margin:0; color:#64748b;">Try a different search term or <a href="#" id="clearSearchLink"
                         style="color:#667eea; text-decoration:none; font-weight:500;">browse all articles</a></p>
             </div>
+        </section>
+
+        <!-- Newsletter CTA -->
+        <section class="newsletter-cta" id="newsletterCTA">
+            <h3>🔥 Get FIRE Tips in Your Inbox</h3>
+            <p>Join thousands on the path to financial independence. No spam, ever.</p>
+            <form class="newsletter-form" id="newsletterForm">
+                <input type="email" class="newsletter-input" placeholder="Enter your email" required>
+                <button type="submit" class="newsletter-btn">Subscribe</button>
+            </form>
         </section>
     </main>
 
@@ -93,36 +114,6 @@
         </div>
     </footer>
 
-    <style>
-        .search-container {
-            position: relative;
-        }
-
-        .search-clear {
-            position: absolute;
-            right: 16px;
-            top: 50%;
-            transform: translateY(-50%);
-            background: none;
-            border: none;
-            font-size: 1.1rem;
-            color: #94a3b8;
-            cursor: pointer;
-            padding: 4px 8px;
-            border-radius: 50%;
-            transition: color 0.2s, background 0.2s;
-        }
-
-        .search-clear:hover {
-            color: #475569;
-            background: rgba(0, 0, 0, 0.05);
-        }
-
-        .search-box:not(:disabled) {
-            cursor: text;
-        }
-    </style>
-
     <script>
         (function () {
             const gridEl = document.getElementById('articlesGrid');
@@ -131,30 +122,73 @@
             const searchClear = document.getElementById('searchClear');
             const noResults = document.getElementById('noResults');
             const clearSearchLink = document.getElementById('clearSearchLink');
-            const PAGE_SIZE = 9;
+            const heroPostEl = document.getElementById('heroPost');
+            const tagFiltersEl = document.getElementById('tagFilters');
+            const PAGE_SIZE = 6;
             let allPosts = [];
             let filteredPosts = [];
+            let remainingPosts = []; // posts minus hero
             let renderedCount = 0;
             let isSearching = false;
+            let activeTag = 'all';
             let debounceTimer = null;
 
             function htmlEscape(s) {
                 return (s || '').toString().replace(/[&<>"']/g, c => ({ '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&#39;' }[c]));
             }
 
-            function cardHTML(post) {
+            // ---- Tag label mapping ----
+            const TAG_LABELS = {
+                'all': 'All',
+                'fire-basics': 'FIRE Basics',
+                'personal-story': 'Personal Stories',
+                'saving': 'Saving Tips',
+                'geo-arbitrage': 'Geo-Arbitrage',
+                'retirement-planning': 'Retirement',
+                'comparison': 'Comparisons'
+            };
+
+            // ---- Hero Post ----
+            function renderHeroPost(post) {
+                if (!post) { heroPostEl.innerHTML = ''; return; }
                 const cover = post.cover && post.cover.trim() ? post.cover : '';
                 const date = new Date(post.date).toLocaleDateString(undefined, { year: 'numeric', month: 'long', day: 'numeric' });
+                heroPostEl.innerHTML = `
+                <a href="/blog/${encodeURIComponent(post.slug)}" class="hero-post">
+                    ${cover
+                        ? `<img class="hero-post-image" src="${htmlEscape(cover)}" alt="${htmlEscape(post.title)} — cover image">`
+                        : `<div class="hero-post-image" style="background: var(--gradient); display:flex; align-items:center; justify-content:center; font-size:5rem;">🔥</div>`
+                    }
+                    <div class="hero-post-content">
+                        <div class="hero-post-meta">
+                            ${post.featured ? '<span class="article-tag">Featured</span>' : ''}
+                            <span class="meta-date">${date}</span>
+                            <span class="meta-dot">●</span>
+                            <span class="read-time">${htmlEscape(post.readTime || '5 min read')}</span>
+                        </div>
+                        <h2>${htmlEscape(post.title)}</h2>
+                        <p class="hero-excerpt">${htmlEscape(post.subtitle || post.description || '')}</p>
+                        <span class="hero-read-more">Read Article →</span>
+                    </div>
+                </a>`;
+            }
+
+            // ---- Card HTML ----
+            function cardHTML(post) {
+                const cover = post.cover && post.cover.trim() ? post.cover : '';
+                const date = new Date(post.date).toLocaleDateString(undefined, { year: 'numeric', month: 'short', day: 'numeric' });
                 const imgBlock = cover
-                    ? `<div class="article-thumbnail" style="padding:0; height:auto;"><img src="${htmlEscape(cover)}" alt="${htmlEscape(post.title)} — article cover image" style="width:100%; height:220px; object-fit:cover; display:block;"></div>`
-                    : `<div class="article-thumbnail">📝</div>`;
+                    ? `<div class="article-thumbnail"><img src="${htmlEscape(cover)}" alt="${htmlEscape(post.title)} — cover image" loading="lazy"></div>`
+                    : `<div class="article-thumbnail-placeholder">📝</div>`;
                 return `
-                <a href="/blog/${encodeURIComponent(post.slug)}" style="text-decoration:none; color:inherit;">
+                <a href="/blog/${encodeURIComponent(post.slug)}" class="article-card-wrap">
                   <article class="article-card">
                     ${imgBlock}
                     <div class="article-content">
                         <div class="article-meta">
-                            <span class="article-date">📅 ${date}</span>
+                            <span class="meta-date">${date}</span>
+                            <span class="meta-dot">●</span>
+                            <span class="read-time">${htmlEscape(post.readTime || '5 min read')}</span>
                             ${post.featured ? '<span class="article-tag">Featured</span>' : ''}
                         </div>
                         <h3 class="article-title">${htmlEscape(post.title)}</h3>
@@ -165,6 +199,78 @@
                 </a>`;
             }
 
+            // ---- Tag Filters ----
+            function buildTagFilters() {
+                // Collect unique tags
+                const tagSet = new Set();
+                allPosts.forEach(p => (p.tags || []).forEach(t => tagSet.add(t)));
+
+                // Build pills — only show tags we have labels for
+                const displayTags = ['all', ...Array.from(tagSet).filter(t => TAG_LABELS[t])];
+                tagFiltersEl.innerHTML = displayTags.map(tag =>
+                    `<button class="tag-pill${tag === activeTag ? ' active' : ''}" data-tag="${htmlEscape(tag)}">${TAG_LABELS[tag] || tag}</button>`
+                ).join('');
+
+                // Click handlers
+                tagFiltersEl.querySelectorAll('.tag-pill').forEach(btn => {
+                    btn.addEventListener('click', function () {
+                        activeTag = this.dataset.tag;
+                        searchInput.value = '';
+                        searchClear.style.display = 'none';
+                        isSearching = false;
+                        applyFilters();
+
+                        // Update active pill
+                        tagFiltersEl.querySelectorAll('.tag-pill').forEach(b => b.classList.remove('active'));
+                        this.classList.add('active');
+                    });
+                });
+            }
+
+            // ---- Filtering logic ----
+            function applyFilters() {
+                let posts = allPosts;
+
+                // Tag filter
+                if (activeTag !== 'all') {
+                    posts = posts.filter(p => (p.tags || []).includes(activeTag));
+                }
+
+                // Search filter
+                if (isSearching) {
+                    const terms = searchInput.value.toLowerCase().trim().split(/\s+/);
+                    posts = posts.filter(post => {
+                        const haystack = [
+                            post.title || '',
+                            post.subtitle || '',
+                            post.description || '',
+                            ...(post.tags || [])
+                        ].join(' ').toLowerCase();
+                        return terms.every(term => haystack.includes(term));
+                    });
+                }
+
+                filteredPosts = posts;
+
+                // If searching or filtering by tag, no hero — show all in grid
+                if (isSearching || activeTag !== 'all') {
+                    heroPostEl.innerHTML = '';
+                    remainingPosts = filteredPosts;
+                } else {
+                    // Show first post as hero, rest in grid
+                    if (filteredPosts.length > 0) {
+                        renderHeroPost(filteredPosts[0]);
+                        remainingPosts = filteredPosts.slice(1);
+                    } else {
+                        heroPostEl.innerHTML = '';
+                        remainingPosts = [];
+                    }
+                }
+
+                renderPosts(remainingPosts, false);
+            }
+
+            // ---- Render grid ----
             function renderPosts(posts, append) {
                 if (!append) {
                     gridEl.innerHTML = '';
@@ -174,60 +280,54 @@
                 gridEl.insertAdjacentHTML('beforeend', next.map(cardHTML).join(''));
                 renderedCount += next.length;
 
-                // Show/hide load more
-                if (isSearching || renderedCount >= posts.length) {
+                // Load more visibility
+                if (isSearching || activeTag !== 'all' || renderedCount >= posts.length) {
                     loadMoreBtn.style.display = 'none';
                 } else {
                     loadMoreBtn.style.display = 'inline-block';
                 }
 
-                // Show/hide no results
-                if (isSearching && posts.length === 0) {
+                // No results
+                const totalVisible = (heroPostEl.innerHTML ? 1 : 0) + renderedCount;
+                if ((isSearching || activeTag !== 'all') && filteredPosts.length === 0) {
                     noResults.style.display = 'block';
                 } else {
                     noResults.style.display = 'none';
                 }
             }
 
+            // ---- Search ----
             function searchPosts(query) {
                 const q = query.toLowerCase().trim();
                 isSearching = q.length > 0;
                 searchClear.style.display = isSearching ? 'block' : 'none';
 
-                if (!isSearching) {
-                    filteredPosts = allPosts;
-                    renderPosts(filteredPosts, false);
-                    // Update URL
+                applyFilters();
+
+                // Update URL
+                if (isSearching) {
+                    const url = new URL(window.location);
+                    url.searchParams.set('q', query);
+                    history.replaceState(null, '', url);
+                } else {
                     history.replaceState(null, '', '/blog');
-                    return;
                 }
-
-                const terms = q.split(/\s+/);
-                filteredPosts = allPosts.filter(post => {
-                    const haystack = [
-                        post.title || '',
-                        post.subtitle || '',
-                        post.description || '',
-                        ...(post.tags || [])
-                    ].join(' ').toLowerCase();
-                    return terms.every(term => haystack.includes(term));
-                });
-
-                renderPosts(filteredPosts, false);
-
-                // Update URL with search param
-                const url = new URL(window.location);
-                url.searchParams.set('q', query);
-                history.replaceState(null, '', url);
             }
 
             function clearSearch() {
                 searchInput.value = '';
-                searchPosts('');
+                isSearching = false;
+                searchClear.style.display = 'none';
+                activeTag = 'all';
+                tagFiltersEl.querySelectorAll('.tag-pill').forEach(b => b.classList.remove('active'));
+                const allBtn = tagFiltersEl.querySelector('[data-tag="all"]');
+                if (allBtn) allBtn.classList.add('active');
+                applyFilters();
+                history.replaceState(null, '', '/blog');
                 searchInput.focus();
             }
 
-            // Event listeners
+            // ---- Event Listeners ----
             searchInput.addEventListener('input', function () {
                 clearTimeout(debounceTimer);
                 debounceTimer = setTimeout(() => searchPosts(this.value), 300);
@@ -240,9 +340,10 @@
             });
 
             loadMoreBtn.addEventListener('click', function () {
-                renderPosts(isSearching ? filteredPosts : allPosts, true);
+                renderPosts(remainingPosts, true);
             });
 
+            // ---- Init ----
             async function init() {
                 try {
                     const url = `/blog/posts/posts.json?ts=${Date.now()}`;
@@ -258,6 +359,8 @@
 
                     allPosts.sort((a, b) => new Date(b.date) - new Date(a.date));
 
+                    buildTagFilters();
+
                     // Check for ?q= param
                     const params = new URLSearchParams(window.location.search);
                     const q = params.get('q');
@@ -265,8 +368,7 @@
                         searchInput.value = q;
                         searchPosts(q);
                     } else {
-                        filteredPosts = allPosts;
-                        renderPosts(allPosts, false);
+                        applyFilters();
                     }
                 } catch (e) {
                     console.error('Failed to load posts.json', e);
