feat: temporarily comment out newsletter CTA section with a note for backend readiness.

--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -89,7 +89,7 @@
             </div>
         </section>
 
-        <!-- Newsletter CTA -->
+        <!-- Newsletter CTA (uncomment when backend is ready)
         <section class="newsletter-cta" id="newsletterCTA">
             <h3>🔥 Get FIRE Tips in Your Inbox</h3>
             <p>Join thousands on the path to financial independence. No spam, ever.</p>
@@ -98,6 +98,7 @@
                 <button type="submit" class="newsletter-btn">Subscribe</button>
             </form>
         </section>
+        -->
     </main>
 
     <!-- Footer -->
